--- a/views/user/order-details.ejs
+++ b/views/user/order-details.ejs
@@ -81,7 +81,7 @@
                                     <h6 class="mb-1">Order info</h6>
                                     <p class="mb-1">
                                         
-                                        Pay method:  <%= payment %>  <br> Status:<%= order.status %>
+                                        Pay method:  <%= order.payment %>  <br> Status:<%= order.status %>
 
                                     </p>
                                     
