--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -109,6 +109,7 @@
           <div class="card mb-4">
             <article class="card-body">
               <h5 class="card-title">Sale statistics</h5>
+              <input type="text" value="<%= monthlySalesArray %>" hidden id="monthlySalesArray">
               <canvas id="myChart" height="120px"></canvas>
             </article>
           </div>
@@ -407,7 +408,11 @@
         </nav>
       </div>
     </section>
+
     <!-- content-main end// -->
     <%-include('../partials/adminfooter') %>
   </main>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+
