--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -105,44 +105,49 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xl-8 col-lg-12">
+        <div class="col-8">
           <div class="card mb-4">
             <article class="card-body">
               <h5 class="card-title">Sale statistics</h5>
-              <input type="text" value="<%= monthlySalesArray %>" hidden id="monthlySalesArray">
-              <input type="text" value="<%= productsPerMonth %>" hidden id="productsPerMonth">
+              <input
+                type="text"
+                value="<%= monthlySalesArray %>"
+                hidden
+                id="monthlySalesArray"
+              />
+              <input
+                type="text"
+                value="<%= productsPerMonth %>"
+                hidden
+                id="productsPerMonth"
+              />
               <canvas id="myChart" height="120px"></canvas>
             </article>
           </div>
-          
-          <div class="row"></div>
+        </div>
+
+        <div class="col-4">
+          <div class="card mb-4">
+            <article class="card-body">
+              <h5 class="card-title">Order Status</h5>
+              <input
+                type="text"
+                value="<%= orderStatusArray %>"
+                hidden
+                id="orderStatusArray"
+              />
+              <canvas id="myChart2" height="217"></canvas>
+            </article>
+          </div>
         </div>
       </div>
-     
+
       <div class="card mb-4">
         <header class="card-header">
           <h4 class="card-title">Latest orders</h4>
           <div class="row align-items-center">
-            <div class="col-md-3 col-12 me-auto mb-md-0 mb-3">
-              <div class="custom_select">
-                <select class="form-select select-nice">
-                  <option selected>All Categories</option>
-                  <option>Women's Clothing</option>
-                  <option>Men's Clothing</option>
-                  <option>Cellphones</option>
-                  <option>Computer & Office</option>
-                  <option>Consumer Electronics</option>
-                  <option>Jewelry & Accessories</option>
-                  <option>Home & Garden</option>
-                  <option>Luggage & Bags</option>
-                  <option>Shoes</option>
-                  <option>Mother & Kids</option>
-                </select>
-              </div>
-            </div>
-            <div class="col-md-2 col-6">
-              <input type="date" value="02.05.2022" class="form-control" />
-            </div>
+            <div class="col-md-3 col-12 me-auto mb-md-0 mb-3"></div>
+
             <div class="col-md-2 col-6">
               <div class="custom_select">
                 <select class="form-select select-nice">
@@ -156,7 +161,7 @@
             </div>
           </div>
         </header>
-        
+
         <div class="card-body">
           <div class="table-responsive">
             <div class="table-responsive">
@@ -165,11 +170,6 @@
                   <tr>
                     <th scope="col" class="text-center">
                       <div class="form-check align-middle">
-                        <input
-                          class="form-check-input"
-                          type="checkbox"
-                          id="transactionCheck01"
-                        />
                         <label
                           class="form-check-label"
                           for="transactionCheck01"
@@ -182,208 +182,29 @@
                     <th class="align-middle" scope="col">Total</th>
                     <th class="align-middle" scope="col">Payment Status</th>
                     <th class="align-middle" scope="col">Payment Method</th>
-                    <th class="align-middle" scope="col">View Details</th>
                   </tr>
                 </thead>
                 <tbody>
+                  <% orders.forEach(order=>{ %>
                   <tr>
-                    <td class="text-center">
-                      <div class="form-check">
-                        <input
-                          class="form-check-input"
-                          type="checkbox"
-                          id="transactionCheck02"
-                        />
-                        <label
-                          class="form-check-label"
-                          for="transactionCheck02"
-                        ></label>
-                      </div>
-                    </td>
-                    <td><a href="#" class="fw-bold">#SK2540</a></td>
-                    <td>Neal Matthews</td>
-                    <td>07 Oct, 2022</td>
-                    <td>$400</td>
+                    <td class="text-center"></td>
+                    <td><%= order._id %></td>
+                    <td><%= order.userId.name %></td>
+                    <td><%= formatDate(order.createdOn) %></td>
+                    <td><%= order.totalPrice %></td>
                     <td>
-                      <span class="badge badge-pill badge-soft-success"
-                        >Paid</span
+                      <span class="badge badge-pill badge-success"
+                        ><%= order.status %></span
                       >
                     </td>
                     <td>
                       <i
                         class="material-icons md-payment font-xxl text-muted mr-5"
                       ></i>
-                      Mastercard
-                    </td>
-                    <td>
-                      <a href="#" class="btn btn-xs"> View details</a>
+                      <%= order.payment %>
                     </td>
                   </tr>
-                  <tr>
-                    <td class="text-center">
-                      <div class="form-check">
-                        <input
-                          class="form-check-input"
-                          type="checkbox"
-                          id="transactionCheck03"
-                        />
-                        <label
-                          class="form-check-label"
-                          for="transactionCheck03"
-                        ></label>
-                      </div>
-                    </td>
-                    <td><a href="#" class="fw-bold">#SK2541</a></td>
-                    <td>Jamal Burnett</td>
-                    <td>07 Oct, 2022</td>
-                    <td>$380</td>
-                    <td>
-                      <span class="badge badge-pill badge-soft-danger"
-                        >Chargeback</span
-                      >
-                    </td>
-                    <td>
-                      <i
-                        class="material-icons md-payment font-xxl text-muted mr-5"
-                      ></i>
-                      Visa
-                    </td>
-                    <td>
-                      <a href="#" class="btn btn-xs"> View details</a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="text-center">
-                      <div class="form-check">
-                        <input
-                          class="form-check-input"
-                          type="checkbox"
-                          id="transactionCheck04"
-                        />
-                        <label
-                          class="form-check-label"
-                          for="transactionCheck04"
-                        ></label>
-                      </div>
-                    </td>
-                    <td><a href="#" class="fw-bold">#SK2542</a></td>
-                    <td>Juan Mitchell</td>
-                    <td>06 Oct, 2022</td>
-                    <td>$384</td>
-                    <td>
-                      <span class="badge badge-pill badge-soft-success"
-                        >Paid</span
-                      >
-                    </td>
-                    <td>
-                      <i
-                        class="material-icons md-payment font-xxl text-muted mr-5"
-                      ></i>
-                      Paypal
-                    </td>
-                    <td>
-                      <a href="#" class="btn btn-xs"> View details</a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="text-center">
-                      <div class="form-check">
-                        <input
-                          class="form-check-input"
-                          type="checkbox"
-                          id="transactionCheck05"
-                        />
-                        <label
-                          class="form-check-label"
-                          for="transactionCheck05"
-                        ></label>
-                      </div>
-                    </td>
-                    <td><a href="#" class="fw-bold">#SK2543</a></td>
-                    <td>Barry Dick</td>
-                    <td>05 Oct, 2022</td>
-                    <td>$412</td>
-                    <td>
-                      <span class="badge badge-pill badge-soft-success"
-                        >Paid</span
-                      >
-                    </td>
-                    <td>
-                      <i
-                        class="material-icons md-payment font-xxl text-muted mr-5"
-                      ></i>
-                      Mastercard
-                    </td>
-                    <td>
-                      <a href="#" class="btn btn-xs"> View details</a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="text-center">
-                      <div class="form-check">
-                        <input
-                          class="form-check-input"
-                          type="checkbox"
-                          id="transactionCheck06"
-                        />
-                        <label
-                          class="form-check-label"
-                          for="transactionCheck06"
-                        ></label>
-                      </div>
-                    </td>
-                    <td><a href="#" class="fw-bold">#SK2544</a></td>
-                    <td>Ronald Taylor</td>
-                    <td>04 Oct, 2022</td>
-                    <td>$404</td>
-                    <td>
-                      <span class="badge badge-pill badge-soft-warning"
-                        >Refund</span
-                      >
-                    </td>
-                    <td>
-                      <i
-                        class="material-icons md-payment font-xxl text-muted mr-5"
-                      ></i>
-                      Visa
-                    </td>
-                    <td>
-                      <a href="#" class="btn btn-xs"> View details</a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="text-center">
-                      <div class="form-check">
-                        <input
-                          class="form-check-input"
-                          type="checkbox"
-                          id="transactionCheck07"
-                        />
-                        <label
-                          class="form-check-label"
-                          for="transactionCheck07"
-                        ></label>
-                      </div>
-                    </td>
-                    <td><a href="#" class="fw-bold">#SK2545</a></td>
-                    <td>Jacob Hunter</td>
-                    <td>04 Oct, 2022</td>
-                    <td>$392</td>
-                    <td>
-                      <span class="badge badge-pill badge-soft-success"
-                        >Paid</span
-                      >
-                    </td>
-                    <td>
-                      <i
-                        class="material-icons md-payment font-xxl text-muted mr-5"
-                      ></i>
-                      Paypal
-                    </td>
-                    <td>
-                      <a href="#" class="btn btn-xs"> View details</a>
-                    </td>
-                  </tr>
+                  <% });%>
                 </tbody>
               </table>
             </div>
@@ -419,4 +240,3 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
-
