--- a/views/partials/adminaside.ejs
+++ b/views/partials/adminaside.ejs
@@ -46,7 +46,7 @@
           </a>
         
         
-          <a class="menu-link" href="page-transactions-1.html">
+          <a class="menu-link" href="/admin/sales-report">
             <i class="icon material-icons md-monetization_on"></i>
             <span class="text">Sales Report</span>
           </a>
