--- a/views/admin/salesReport.ejs
+++ b/views/admin/salesReport.ejs
@@ -144,4 +144,13 @@
 });
 
 
+      
+document.getElementById('downloadPdf').addEventListener('click', function () {
+ 
+        const selectedValue = document.getElementById('filterOrders').value;
+        const url = `/admin/sales-report?date=${selectedValue}&downloadPdf=true`;
+        window.location.href = url;
+      });
+
+
         </script>
