--- a/views/user/order-list.ejs
+++ b/views/user/order-list.ejs
@@ -76,7 +76,20 @@
                 <td><%= order.totalPrice.toFixed(2) %></td>
 
                 <td><%= formatDate(order.createdOn) %></td>
-                <td><span><%= order.status %></span></td>
+                <% if (order.status=='pending') { %>
+
+                  <td><span class="badge rounded-pill alert-warning">Pending</span></td>
+                  <% } else if(order.status=='Order confirmed'){ %>
+                      <td><span class="badge rounded-pill alert-soft-success">Confirmed</span></td>
+                      <% } else if(order.status=='Cancel Order'){ %>
+                          <td><span class="badege rounded-pill alert-danger">Cancelled</span></td>
+                  <% } else if(order.status=='Shipped'){ %>
+                      <td><span class="badge rounded-pill alert-success">Shipped</span></td>
+                      <% } else if(order.status=='delivered'){ %>
+                          <td><span class="badge rounded-pill alert-success">Delivered</span></td>
+                          <% } else if(order.status=='Out of delivery'){ %>
+                              <td><span class="badge rounded-pill alert-success">Out of delivery</span></td>
+                          <% } %>
 
                 <td>
                   <a href="/order-details/<%=order._id %>"
@@ -87,14 +100,27 @@
                       Details
                     </button></a
                   >
+                  <% if(order.status=='delivered') { %>
+                    <a
+                    href="#"
+                    class="btn btn-outline-warning"
+                   
+                    style="font-size: 10px; padding: 5px 10px"
+                    >Return</a
+                  >
+                    <% } %> 
+                   <% if (order.status !== 'delivered' && order.status !== 'Cancel Order'){%>
 
                   <a
                     href="#"
                     class="btn btn-outline-danger"
                     onclick="confirmCancel('<%=order._id%>')"
+                    id="cancelButton_<%= order._id %>"
                     style="font-size: 10px; padding: 5px 10px"
+                    <% if (order.status === 'Cancel Order') { %> disabled <% } %>
                     >Cancel</a
                   >
+                  <% } %>
                 </td>
 
                 <td><i class="fa fa-ellipsis-h text-black-50"></i></td>
@@ -158,3 +184,4 @@
     });
   }
 </script>
+
